--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "test": "test"
   },
   "author": "quentin@devauchelle.eu",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "express": "^4.9.0",
+    "jade": "^1.6.0"
+  }
 }
